--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
             <h2>Opal</h2>
             <div class="box-img6"></div>
             <p>Rashi (Zodiac Sign): <br> Kumbha (Aquarius), Meena (Pisces).</p><br>
-            <p>Multicolored</p><br> 
-            <p>White</p><br>  
+            <p>Multicolored</p><br>  
             <p>Black</p><br>  
             <p>Blue</p><br>  
             <p>Red</p><br>  
@@ -150,8 +149,8 @@
             <p>Rashi (Zodiac Sign): <br>Mesh (Aries), Vrishabha (Taurus).</p><br>
             <p>Green (Daylight)</p><br>  
             <p>Bluish-Green (Daylight)</p><br>  
-            <p>Reddish (Incandescent Light)</p><br>  
-            <p>Purplish-Red (Incandescent Light)</p><br> 
+            <p>Reddish</p><br>  
+            <p>Purplish-Red </p><br> 
             <p><a href="https://simple.wikipedia.org/wiki/Alexandrite">see more</a></p></div></a>
         <a class="diamon" href="diamond.html"> <div class="box8 box2nd ">
             <h2>Morganite</h2>
