--- a/diamond.html
+++ b/diamond.html
@@ -78,6 +78,13 @@
         .copyright a{
             color: wheat;
         }
+        @media (max-width: 768px) {
+            .copyright {
+            font-size: 12px;
+            padding: 5px;
+            text-align: center;
+            }
+        }
     </style>
 </head>
 <body>
