--- a/resabcontact.html
+++ b/resabcontact.html
@@ -102,7 +102,12 @@
                     height: 80px;
                     width: 80px;
                 }
-            }
+                .copyright {
+                    font-size: 12px;
+                    padding: 5px;
+                    text-align: center;
+                    }
+                }
             .copyright{
             height: 40px;
             width: 100%;
