--- a/portfoliostone.html
+++ b/portfoliostone.html
@@ -83,6 +83,11 @@
             .container {
                 width: 90%;
             }
+            .copyright {
+                font-size: 12px;
+                padding: 5px;
+                text-align: center;
+            }
         }
         .copyright{
             height: 40px;
