--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="nav-return border size">
             <a href="resabcontact.html"><i class="fa-solid fa-phone"></i></a>
         </div>
-        <div class="nav-singin border size">
+        <div class="nav-singin size">
             <a href="portfoliostone.html"><i class="fa-solid fa-user"></i></a>
         </div>
         
