--- a/resabcontact.html
+++ b/resabcontact.html
@@ -39,9 +39,19 @@
                 margin-bottom: 10px;
             }
             .imagelogo{
-                height: 110px;
-                width: 110px;
+                height: 50px;
+                width: 50px;
                 padding-right: 10px;
+                display: flex;
+            }
+            img{
+                width: 150px;
+                height: 150px;
+                padding: none;
+                margin: 0px;
+            }
+            .girlpic{
+                width: 60%;
             }
 
             .contact, .delivery, .experience {
@@ -129,7 +139,10 @@
     <!-- Website Name -->
     <header>
         <h1>Resab's Stone</h1>
-        <img class="imagelogo" src="resabstonelogoup.png" alt="Your Photo">
+        <div class="imglogo">
+        <img  src="resabstonelogoup.png" alt="Your Photo">
+        <!-- <img class="girlpic" src="resabstonecontact&port.jpg" alt="jewellerypic"> -->
+        </div>
     </header>
 
     <!-- About Section -->
