--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      
      <div class="panel">
         <div class="panel-all">
-            <div><i class="fa-solid fa-bars"></i></div>
+            <!-- <div><i class="fa-solid fa-bars"></i></div> -->
            <div> All</div>
         </div>
         <div class="panel-ops ">
@@ -162,18 +162,18 @@
 
     <footer>
         <div class="footer-panel1">
-            Back to top
+            <div class="txt">Back to top</div>
         </div>
         <div class="foot-panel2">
             <ul>
-                <p>Join with us</p>
-                <a href="">For Your Premium</a>
-                <p>Stones Ads</p>
-                <a href="">Expences</a>
-                <p>9am</p>
-                <a href="">Score deals</a>
-                <p>RESAb's Stone Services</p>
-                <a href="">Computing Services</a>
+                <p class="flexx">Join with us</p>
+                <a class="flexx" href="">For Your Premium</a>
+                <p class="flexx" >Stones Ads</p>
+                <a class="flexx" href="">Expences</a>
+                <p class="flexx">9am</p>
+                <a class="flexx" href="">Score deals</a>
+                <p class="flexx" >RESAb's Stone Services</p>
+                <a class="flexx" href="">Computing Services</a>
                 </ul>
                
         </div>
